vest-dsl/test/bad/byte_array_len_type2.vest
fmt(@a: [u8; 4]) = {
  b: [u8; @a],
}
